--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -130,6 +130,14 @@ input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 3px 3px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  
 }
 button[disabled],
 html input[disabled] {
@@ -2728,13 +2736,16 @@ select[multiple].input-sm {
 }
 .form-group-sm select.form-control {
   height: 30px;
+  
   line-height: 30px;
 }
 .form-group-sm textarea.form-control,
 .form-group-sm select[multiple].form-control {
+  
   height: auto;
 }
 .form-group-sm .form-control-static {
+  
   height: 30px;
   min-height: 32px;
   padding: 6px 10px;
@@ -2757,6 +2768,7 @@ select[multiple].input-lg {
   height: auto;
 }
 .form-group-lg .form-control {
+  
   height: 46px;
   padding: 10px 16px;
   font-size: 18px;
@@ -2764,6 +2776,7 @@ select[multiple].input-lg {
   border-radius: 6px;
 }
 .form-group-lg select.form-control {
+  
   height: 46px;
   line-height: 46px;
 }
@@ -3463,6 +3476,13 @@ input[type="submit"].btn-block,
 input[type="reset"].btn-block,
 input[type="button"].btn-block {
   width: 100%;
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 .fade {
   opacity: 0;
@@ -4380,6 +4400,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     display: inline-block;
     margin-bottom: 0;
     vertical-align: middle;
+    
   }
   .navbar-form .form-control {
     display: inline-block;
@@ -4428,6 +4449,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (max-width: 767px) {
   .navbar-form .form-group {
     margin-bottom: 5px;
+    
   }
   .navbar-form .form-group:last-child {
     margin-bottom: 0;
@@ -4719,6 +4741,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 }
 .pagination > li > a,
 .pagination > li > span {
+  
   position: relative;
   float: left;
   padding: 6px 12px;
@@ -5701,22 +5724,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #ddd;
 }
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #8b5623db;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #8b5623db;
+  border-color: #8b5623db;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #8b5623db;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #8b5623db;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #8b5623db;
 }
 .panel-success {
   border-color: #d6e9c6;
