--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,24 @@
 	margin:0 auto;
 }
 */
+/* Remove the navbar's default rounded borders and increase the bottom margin */ 
+.navbar {
+    margin-bottom: 50px;
+    border-radius: 0;
+  }
+  
+  /* Remove the jumbotron's default bottom margin */ 
+  .jumbotron {
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+@media all and (min-width: 992px) {
+	.navbar .nav-item .dropdown-menu{ display: none; }
+	.navbar .nav-item:hover .nav-link{ color: #fff;  }
+	.navbar .nav-item:hover .dropdown-menu{ display: block;}
+	.navbar .nav-item .dropdown-menu{ margin-top:0; }
+}
 
 
 .san_pham:hover{
@@ -81,4 +99,186 @@
 	float: right;
 	
 }
+.login-form {
+	margin-top: 50px;
+	border: 1px solid #cacaca;
+	padding: 1rem;
+	border-radius: 0;
+  }
+  /* button */
+  .btn {
 
+	position: relative;
+	
+	padding: 1.4rem 4.2rem;
+	
+	padding-right: 3.1rem;
+	
+	font-size: 1.4rem;
+	
+	color: var(--inv);
+	
+	letter-spacing: 1.1rem;
+	
+	text-transform: uppercase;
+	
+	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
+	
+	cursor: pointer;
+	
+	user-select: none;
+	
+	}
+	
+	.btn:before, .btn:after {
+	
+	content: '';
+	
+	position: absolute;
+	
+	transition: inherit;
+	
+	z-index: -1;
+	
+	}
+	
+	.btn:hover {
+	
+	color: var(--def);
+	
+	transition-delay: .5s;
+	
+	}
+	
+	.btn:hover:before {
+	
+	transition-delay: 0s;
+	
+	}
+	
+	.btn:hover:after {
+	
+	background: var(--inv);
+	
+	transition-delay: .35s;
+	
+	}
+	
+	/* From Top */
+	.from-top:before, 
+	
+	.from-top:after {
+	
+	left: 0;
+	
+	height: 0;
+	
+	width: 100%;
+	
+	}
+	
+	.from-top:before {
+	
+	bottom: 0;
+	
+	border: 1px solid var(--inv);
+	
+	border-top: 0;
+	
+	border-bottom: 0;
+	
+	}
+	
+	.from-top:after {
+	
+	top: 0;
+	
+	height: 0;
+	
+	}
+	
+	.from-top:hover:before,
+	
+	.from-top:hover:after {
+	
+	height: 100%;
+	
+	}
+	
+	/* From Left */
+	.from-left:before, 
+	
+	.from-left:after {
+	
+	top: 0;
+	
+	width: 0;
+	
+	height: 100%;
+	
+	}
+	
+	.from-left:before {
+	
+	right: 0;
+	
+	border: 1px solid var(--inv);
+	
+	border-left: 0;
+	
+	border-right: 0;
+	
+	}
+	
+	.from-left:after {
+	
+	left: 0;
+	
+	}
+	
+	.from-left:hover:before,
+	
+	.from-left:hover:after {
+	
+	width: 100%;
+	
+	}
+	
+	/* From Right */
+	.from-right:before, 
+	
+	.from-right:after {
+	
+	top: 0;
+	
+	width: 0;
+	
+	height: 100%;
+	
+	}
+	
+	.from-right:before {
+	
+	left: 0;
+	
+	border: 1px solid var(--inv);
+	
+	border-left: 0;
+	
+	border-right: 0;
+	
+	}
+	
+	.from-right:after {
+	
+	right: 0;
+	
+	}
+	
+	.from-right:hover:before,
+	
+	.from-right:hover:after {
+	
+	width: 100%;
+	
+	}
