--- a/css/style.css
+++ b/css/style.css
@@ -1,284 +1,231 @@
-/* CSS Document */
-/*
-.container {
-	width:940px; 	
-	padding:20px 0 20px 0;
-	margin:0 auto;
-}
-*/
-/* Remove the navbar's default rounded borders and increase the bottom margin */ 
 .navbar {
     margin-bottom: 50px;
     border-radius: 0;
-  }
-  
-  /* Remove the jumbotron's default bottom margin */ 
-  .jumbotron {
+}
+
+.jumbotron {
     margin-bottom: 0;
     padding-top: 0;
     padding-bottom: 0;
-  }
+}
+
 @media all and (min-width: 992px) {
-	.navbar .nav-item .dropdown-menu{ display: none; }
-	.navbar .nav-item:hover .nav-link{ color: #fff;  }
-	.navbar .nav-item:hover .dropdown-menu{ display: block;}
-	.navbar .nav-item .dropdown-menu{ margin-top:0; }
+    .navbar .nav-item .dropdown-menu {
+        display: none;
+    }
+    .navbar .nav-item:hover .nav-link {
+        color: #fff;
+    }
+    .navbar .nav-item:hover .dropdown-menu {
+        display: block;
+    }
+    .navbar .nav-item .dropdown-menu {
+        margin-top: 0;
+    }
 }
 
-
-.san_pham:hover{
-/*	background: #CCC9C9;*/
-	-webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-  -ms-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
-	
-
-	
+.san_pham:hover {
+    /*	background: #CCC9C9;*/
+    -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+    -ms-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
 }
+
 .san_pham img {
-	width: 100%;
-	height: 190px;
-	margin-top: 10px;
+    width: 100%;
+    height: 190px;
+    margin-top: 10px;
 }
+
 .gia {
-	color: red;
+    color: red;
 }
+
 .a1 {
-	 text-decoration: none;
-	color: #090202;
+    text-decoration: none;
+    color: #090202;
 }
+
 .a1:hover {
-	text-decoration: none;
+    text-decoration: none;
 }
-.nut_mua{
-	
-	background-color: white;
-	color: #804204;
-	border: 2px solid #804204;
+
+.nut_mua {
+    background-color: white;
+    color: #804204;
+    border: 2px solid #804204;
     padding: 10px 20px;
-	margin-bottom: 10px;
+    margin-bottom: 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
+    font-size: 17px;
 }
+
 .nut_mua:hover {
-	background-color: #804204; /* Green */
+    background-color: #804204;
+    /* Green */
     border: none;
     color: white;
 }
-.so_luong {
-	width: 50%;
-	height: 40px;
-	text-align: center;
-	
-}
-.p1 {
-	height: 57px;
-    overflow: hidden;
-    text-overflow: ellipsis; 
-   
-}
-.chi_tiet {
-	margin:30px 0 30px 0;
-	
-}
-.ben_trai {
-	width: 450px;
-	padding: 10px;
-	float: left;
-	
-	
-}
-.ben_trai img {
-	width: 100%;
-}
-.ben_phai {
-	width: 450px;
-	float: right;
-	
-}
-.login-form {
-	margin-top: 50px;
-	border: 1px solid #cacaca;
-	padding: 1rem;
-	border-radius: 0;
-  }
-  /* button */
-  .btn {
 
-	position: relative;
-	
-	padding: 1.4rem 4.2rem;
-	
-	padding-right: 3.1rem;
-	
-	font-size: 1.4rem;
-	
-	color: var(--inv);
-	
-	letter-spacing: 1.1rem;
-	
-	text-transform: uppercase;
-	
-	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
-	
-	cursor: pointer;
-	
-	user-select: none;
-	
-	}
-	
-	.btn:before, .btn:after {
-	
-	content: '';
-	
-	position: absolute;
-	
-	transition: inherit;
-	
-	z-index: -1;
-	
-	}
-	
-	.btn:hover {
-	
-	color: var(--def);
-	
-	transition-delay: .5s;
-	
-	}
-	
-	.btn:hover:before {
-	
-	transition-delay: 0s;
-	
-	}
-	
-	.btn:hover:after {
-	
-	background: var(--inv);
-	
-	transition-delay: .35s;
-	
-	}
-	
-	/* From Top */
-	.from-top:before, 
-	
-	.from-top:after {
-	
-	left: 0;
-	
-	height: 0;
-	
-	width: 100%;
-	
-	}
-	
-	.from-top:before {
-	
-	bottom: 0;
-	
-	border: 1px solid var(--inv);
-	
-	border-top: 0;
-	
-	border-bottom: 0;
-	
-	}
-	
-	.from-top:after {
-	
-	top: 0;
-	
-	height: 0;
-	
-	}
-	
-	.from-top:hover:before,
-	
-	.from-top:hover:after {
-	
-	height: 100%;
-	
-	}
-	
-	/* From Left */
-	.from-left:before, 
-	
-	.from-left:after {
-	
-	top: 0;
-	
-	width: 0;
-	
-	height: 100%;
-	
-	}
-	
-	.from-left:before {
-	
-	right: 0;
-	
-	border: 1px solid var(--inv);
-	
-	border-left: 0;
-	
-	border-right: 0;
-	
-	}
-	
-	.from-left:after {
-	
-	left: 0;
-	
-	}
-	
-	.from-left:hover:before,
-	
-	.from-left:hover:after {
-	
-	width: 100%;
-	
-	}
-	
-	/* From Right */
-	.from-right:before, 
-	
-	.from-right:after {
-	
-	top: 0;
-	
-	width: 0;
-	
-	height: 100%;
-	
-	}
-	
-	.from-right:before {
-	
-	left: 0;
-	
-	border: 1px solid var(--inv);
-	
-	border-left: 0;
-	
-	border-right: 0;
-	
-	}
-	
-	.from-right:after {
-	
-	right: 0;
-	
-	}
-	
-	.from-right:hover:before,
-	
-	.from-right:hover:after {
-	
-	width: 100%;
-	
-	}
+.so_luong {
+    width: 50%;
+    height: 40px;
+    text-align: center;
+}
+
+.p1 {
+    height: 57px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.chi_tiet {
+    margin: 30px 0 30px 0;
+}
+
+.ben_trai {
+    width: 450px;
+    padding: 10px;
+    float: left;
+}
+
+.ben_trai img {
+    width: 100%;
+}
+
+.ben_phai {
+    width: 450px;
+    float: right;
+}
+
+.login-form {
+    margin-top: 50px;
+    border: 1px solid #cacaca;
+    padding: 1rem;
+    border-radius: 0;
+}
+
+
+/* button */
+
+.btn {
+    position: relative;
+    padding: 1.4rem 4.2rem;
+    padding-right: 3.1rem;
+    /* font-size: 1.4rem; */
+    color: var(--inv);
+    /* letter-spacing: 1.1rem; */
+    /* text-transform: uppercase; */
+    /* transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1); */
+    cursor: pointer;
+    user-select: none;
+    width: 100%;
+}
+
+.btn:before,
+.btn:after {
+    content: '';
+    position: absolute;
+    transition: inherit;
+    z-index: -1;
+}
+
+.btn:hover {
+    color: var(--def);
+    transition-delay: .5s;
+}
+
+.btn:hover:before {
+    transition-delay: 0s;
+}
+
+.btn:hover:after {
+    background: var(--inv);
+    transition-delay: .35s;
+}
+
+
+/* From Top */
+
+.from-top:before,
+.from-top:after {
+    left: 0;
+    height: 0;
+    width: 100%;
+}
+
+.from-top:before {
+    bottom: 0;
+    border: 1px solid var(--inv);
+    border-top: 0;
+    border-bottom: 0;
+}
+
+.from-top:after {
+    top: 0;
+    height: 0;
+}
+
+.from-top:hover:before,
+.from-top:hover:after {
+    height: 100%;
+}
+
+
+/* From Left */
+
+.from-left:before,
+.from-left:after {
+    top: 0;
+    width: 0;
+    height: 100%;
+}
+
+.from-left:before {
+    right: 0;
+    border: 1px solid var(--inv);
+    border-left: 0;
+    border-right: 0;
+}
+
+.from-left:after {
+    left: 0;
+}
+
+.from-left:hover:before,
+.from-left:hover:after {
+    width: 100%;
+}
+
+
+/* From Right */
+
+.from-right:before,
+.from-right:after {
+    top: 0;
+    width: 0;
+    height: 100%;
+}
+
+.from-right:before {
+    left: 0;
+    border: 1px solid var(--inv);
+    border-left: 0;
+    border-right: 0;
+}
+
+.from-right:after {
+    right: 0;
+}
+
+.from-right:hover:before,
+.from-right:hover:after {
+    width: 100%;
+}
+
+.container h2 {
+    text-align: center;
+}
